--- a/index.html
+++ b/index.html
@@ -17,18 +17,20 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link" href="#">Clear</a>
+                        <a class="nav-link text-danger" href="#">Clear</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Algorithm
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <div class="dropdown-menu" id="select-algo-menu" aria-labelledby="navbarDropdown">
                             <a class="dropdown-item" href="#">A*</a>
                             <a class="dropdown-item" href="#">Dijkstra</a>
                         </div>
                     </li>
                 </ul>
+
+                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Visualize</button>
             </div>
         </nav>
 
