--- a/index.html
+++ b/index.html
@@ -28,6 +28,20 @@
                             <a class="dropdown-item" href="#">Dijkstra</a>
                         </div>
                     </li>
+                    <li class="nav-item">
+                        <div class="nav-divider"></div>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        Draw mode
+                        </a>
+                        <div class="dropdown-menu" id="select-algo-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">Wall Node</a>
+                            <a class="dropdown-item" href="#">Starting Node</a>
+                            <a class="dropdown-item" href="#">Target Node</a>
+                            <a class="dropdown-item" href="#">Clear node</a>
+                        </div>
+                    </li>
                 </ul>
 
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Visualize</button>
