Change grid node type and navbar options

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item active">
-                        <a class="nav-link text-danger" href="#">Clear</a>
+                        <a id="clear-operation" class="nav-link text-danger" href="#">Clear</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -36,15 +36,15 @@
                         Draw mode
                         </a>
                         <div class="dropdown-menu" id="select-algo-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Wall Node</a>
-                            <a class="dropdown-item" href="#">Starting Node</a>
-                            <a class="dropdown-item" href="#">Target Node</a>
-                            <a class="dropdown-item" href="#">Clear node</a>
+                            <a id="wall-node-selector" class="dropdown-item" href="#">Wall Node</a>
+                            <a id="starting-node-selector" class="dropdown-item" href="#">Starting Node</a>
+                            <a id="target-node-selector" class="dropdown-item" href="#">Target Node</a>
+                            <a id="clear-node-selector" class="dropdown-item" href="#">Clear node</a>
                         </div>
                     </li>
                 </ul>
 
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Visualize</button>
+                <button id="visualize-operation" class="btn btn-outline-success my-2 my-sm-0" type="submit">Visualize</button>
             </div>
         </nav>
 
