changed visualize text and remove useless break

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                     </li>
                 </ul>
 
-                <button id="visualize-operation" class="btn btn-outline-success my-2 my-sm-0" type="submit">Visualize</button>
+                <button id="visualize-operation" class="btn btn-outline-success my-2 my-sm-0" type="submit">Visualize!</button>
             </div>
         </nav>
 
