--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                         <div class="nav-divider"></div>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="dropdown-node-selector" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Draw mode
                         </a>
                         <div class="dropdown-menu" id="select-algo-menu" aria-labelledby="navbarDropdown">
