Add Dijkstra algorithm and selection

--- a/index.html
+++ b/index.html
@@ -20,11 +20,12 @@
                         <a id="clear-operation" class="nav-link text-danger" href="#">Clear</a>
                     </li>
                     <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <a class="nav-link dropdown-toggle" href="#" id="dropdown-algorithm-selector" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                         Algorithm
                         </a>
                         <div class="dropdown-menu" id="select-algo-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">A*</a>
+                            <a id="astar-algorithm-selector" class="dropdown-item" href="#">A*</a>
+                            <a id="dijkstra-algorithm-selector" class="dropdown-item" href="#">Dijkstra</a>
                         </div>
                     </li>
                     <li class="nav-item">
